# mudz

./: .licenserc.yaml  Cargo.toml  README.md  mudz.conf.example  mudz.service
.github/workflows/: build.yml  clippy-rustfmt.yml  main.yml  msrv.yml
src/cli/: Cargo.toml
src/daemon/: Cargo.toml  cache.rs  config.rs  dns_server.rs  host.rs  main.rs
src/lib/: Cargo.toml  dns.rs  dns_packet.rs  error.rs  https_client.rs  lib.rs  udp_client.rs
src/lib/tests/: dns_packet.rs  https_client.rs  udp_client.rs
src/lib/unit_tests/: dns_packet.rs  https_client.rs  mod.rs  udp_client.rs
src/packet-dns/: Cargo.toml
