[workspace]
resolver = "2"
members = [
    "src/lib",
    "src/daemon",
]

[workspace.package]
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Linux DNS Caching Daemon"
documentation = "https://github.com/cathay4t/muds"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.dependencies]
serde = { version = "1.0.144", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.17"
serde_json = "1.0.87"
serde_yaml = "0.9.27"
futures = {version = "0.3.29", features = [ "std" ] }
clap = { version = "4.5", features = [ "cargo"] }
chrono = { version = "0.4" , features = ["serde"] }
rand = { version = "0.9" }

[workspace.dependencies.tokio]
version ="1.35.0"
features = ["net", "rt", "rt-multi-thread", "macros", "sync", "time", "fs"]
