[package]
name = "mudzd"
version.workspace = true
authors.workspace = true
description = "The daemon of mudz"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mudzd"
path = "main.rs"

[dependencies]
mudz = { path = "../lib" }
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
